Working on DESeq

--- a/HEK293T_Mengrui.Rmd
+++ b/HEK293T_Mengrui.Rmd
@@ -40,7 +40,7 @@ library(dplyr)
 
 Set your working directory (the entire path to the folder that contains this rmarkdown and your data files)
 ```{r}
-knitr::opts_knit$set(root.dir = "/Users/mariaingersoll/Desktop/BU_Research/Davies-Gilmore/Mengrui_HEK293T")
+knitr::opts_knit$set(root.dir = "/Users/mariaingersoll/Desktop/BU_Research/Davies-Gilmore/Mengrui_HEK293T/HEK293T_RNAseq")
 #using the knitr option, it ensures that all chunks run in this rmd are performed in this working directory
 
 #check your working directory:
@@ -101,8 +101,7 @@ dds<-DESeq(dds)
 vsd.ge=assay(vst(dds))
 rl=vst(dds)
 e=ExpressionSet(assay(rl), AnnotatedDataFrame(as.data.frame(colData(rl))))
-v = setwd("~/Desktop/BU_Research/Davies-Gilmore/Mengrui_HEK293T")
-arrayQualityMetrics(e,outdir=v,intgroup=c("treat"),force=T)
+arrayQualityMetrics(e,outdir="/Users/mariaingersoll/Desktop/BU_Research/Davies-Gilmore/Mengrui_HEK293T/HEK293T_RNAseq/arrayqualitymetrics",intgroup=c("treat"),force=T)
 ```
 Open the index.html file that is printed into the output directory
 --> no outliers
@@ -168,5 +167,154 @@ heatmap.2(as.matrix(sampleDists), key=F, trace="none",
 
 #all the flags are grouping together and then the Ns and the NLS are grouping together
 ```
+
+Look at number of differentially expressed genes between the different treatments
+Use a p-adjusted value of <0.05
+```{r}
+head(res_N_Flag)
+head(res_NLS_Flag)
+head(res_N_NLS)
+
+table(res_N_Flag$padj<0.05)
+# FALSE=9587 TRUE=1379
+summary(res_N_Flag, alpha=0.05)
+# out of 59048 with nonzero total read count
+#adjusted p-value < 0.05
+#LFC > 0 (up)       : 626, 1.1%
+#LFC < 0 (down)     : 753, 1.3%
+#outliers [1]       : 0, 0%
+#low counts [2]     : 48082, 81%
+#(mean count < 5)
+
+table(res_NLS_Flag$padj<0.05)
+# FALSE=7994 TRUE=1828 
+summary(res_NLS_Flag, alpha=0.05)
+#out of 59048 with nonzero total read count
+#adjusted p-value < 0.05
+#LFC > 0 (up)       : 743, 1.3%
+#LFC < 0 (down)     : 1085, 1.8%
+#outliers [1]       : 0, 0%
+#low counts [2]     : 49226, 83%
+#(mean count < 5)
+
+table(res_N_NLS$padj<0.05)
+# FALSE=59047 TRUE=1
+summary(res_N_NLS, alpha=0.05)
+#out of 59048 with nonzero total read count
+#adjusted p-value < 0.05
+#LFC > 0 (up)       : 1, 0.0017%
+#LFC < 0 (down)     : 0, 0%
+#outliers [1]       : 0, 0%
+#low counts [2]     : 0, 0%
+#(mean count < 0)
+
+plotMA(res_N_Flag, main="N vs Flag")
+#saved as plotma_N_Flag as landscape 5x4 in Figures
+plotMA(res_NLS_Flag, main="NLS vs Flag")
+#saved as plotma_NLS_Flag as landscape 5x4 in Figures
+plotMA(res_N_NLS, main="N vs NLS")
+#saved as plotma_N_NLS as landscape 5x4 in Figures
+```
+
+Now make a table of the differential expression values (log2fc) between N, Flag; NLS, Flag; and N, NLS
+```{r}
+write.table(res_N_Flag, file="./Data_Files/N_Flag_DE_24.txt", quote=F, sep="\t")
+head(read.delim("./Data_Files/N_Flag_DE_24.txt"))
+res_N_Flag<- read.delim("./Data_Files/N_Flag_DE_24.txt")
+head(res_N_Flag)
+res_N_Flag$lfc_NFlag <- res_N_Flag$log2FoldChange
+lfc_N_Flag <- res_N_Flag %>%
+  dplyr::select(lfc_NFlag)
+head(lfc_N_Flag)
+
+write.table(res_NLS_Flag, file="./Data_Files/NLS_Flag_DE_24.txt", quote=F, sep="\t")
+head(read.delim("./Data_Files/NLS_Flag_DE_24.txt"))
+res_NLS_Flag<- read.delim("./Data_Files/NLS_Flag_DE_24.txt")
+head(res_NLS_Flag)
+res_NLS_Flag$lfc_NLSFlag <- res_NLS_Flag$log2FoldChange
+lfc_NLS_Flag <- res_NLS_Flag %>%
+  dplyr::select(lfc_NLSFlag)
+head(lfc_NLS_Flag)
+
+write.table(res_N_NLS, file="./Data_Files/N_NLS_DE_24.txt", quote=F, sep="\t")
+head(read.delim("./Data_Files/N_NLS_DE_24.txt"))
+res_N_NLS<- read.delim("./Data_Files/N_NLS_DE_24.txt")
+head(res_N_NLS)
+res_N_NLS$lfc_NNLS <- res_N_NLS$log2FoldChange
+lfc_N_NLS <- res_N_NLS %>%
+  dplyr::select(lfc_NNLS)
+head(lfc_N_NLS)
+```
+
+-Make a table with logfc in NvsFlag and lfc in NLSvsFlag as columns, correlate two columns, is there a pos linear relationshop in lfc? 
+```{r}
+lfc <- cbind(lfc_N_Flag, lfc_NLS_Flag)
+head(lfc)
+
+ggscatter(lfc, x = "lfc_NFlag", y = "lfc_NLSFlag", 
+          add = "reg.line", conf.int = TRUE, 
+          cor.coef = TRUE, cor.method = "pearson",
+          xlab = "DEG LogFoldChange N vs Flag", ylab = "DEG LogFoldChange NLS vs Flag")
+
+#saved as correlation_NNLS.pdf as landscape 5x4 in Figures
+#positively correlated R=0.64, p<2.2e-16
+```
+
+- Get the p-values from your data file
+- Create val_N_Flag that is a table from res_N_Flag of just the pvalues and adjusted p-values (p-adj)
+- Then give the columns appropriate names
+```{r}
+val_N_Flag=cbind(res_N_Flag$pvalue, res_N_Flag$padj)
+head(val_N_Flag)
+colnames(val_N_Flag)=c("pval.N_Flag", "padj.N_Flag")
+length(val_N_Flag[,1])
+# 59048
+
+val_NLS_Flag=cbind(res_NLS_Flag$pvalue, res_NLS_Flag$padj)
+head(val_NLS_Flag)
+colnames(val_NLS_Flag)=c("pval.NLS_Flag", "padj.NLS_Flag")
+length(val_NLS_Flag[,1])
+# 59048
+
+val_N_NLS=cbind(res_N_NLS$pvalue, res_N_NLS$padj)
+head(val_N_NLS)
+colnames(val_N_NLS)=c("pval.N_NLS", "padj.N_NLS")
+length(val_N_NLS[,1])
+# 59048
+```
+
+Return a logical vector in which both cases (pval and padj) are complete (no missing values)
+```{r}
+table(complete.cases(val_N_Flag))
+# FALSE=48082 TRUE=10966
+
+table(complete.cases(val_NLS_Flag))
+# FALSE=49226 TRUE=9822
+
+table(complete.cases(val_N_NLS))
+# TRUE=59048
+```
+
+- Make a table (that you can visualize via assay) of the rlogdata and pvals
+- Then make the column names for rld the same ones that were in colData$treat
+- And separate out into N, NLS, and Flag
+```{r}
+rlog=rlogTransformation(dds, blind=TRUE) 
+rld=assay(rlog)
+head(rld)
+length(rld[,1])
+#59048
+
+rld_Flag <- rld[,1:3]
+head(rld_Flag)
+
+rld_N <- rld[,4:6]
+head(rld_N)
+
+rld_NLS <- rld[,7:9]
+head(rld_NLS)
+```
+
+
 
 
