--- a/HEK293T_Mengrui.Rmd
+++ b/HEK293T_Mengrui.Rmd
@@ -315,6 +315,94 @@ rld_NLS <- rld[,7:9]
 head(rld_NLS)
 ```
 
+- Combine rlds with your tables of pval and padj values (with the respective conditions)
+```{r}
+rldpvals_NFlag=cbind(rld_N,val_N_Flag)
+head(rldpvals_NFlag)
+dim(rldpvals_NFlag)
+table(complete.cases(rldpvals_NFlag))
+#FALSE  TRUE 
+#48082 10966
+write.csv(rldpvals_NFlag, "./Data_Files/mingers_NFlag_RLDandPVALS_24.csv", quote=F)
 
+rldpvals_NLSFlag=cbind(rld_NLS,val_NLS_Flag)
+head(rldpvals_NLSFlag)
+dim(rldpvals_NLSFlag)
+table(complete.cases(rldpvals_NLSFlag))
+#FALSE  TRUE 
+#49226  9822 
+write.csv(rldpvals_NLSFlag, "./Data_Files/mingers_NLSFlag_RLDandPVALS_24.csv", quote=F)
+```
+
+Read back in the csv files you just made to prep for PCA
+```{r}
+rldpvals_NFlag <- read.csv(file="./Data_Files/mingers_NFlag_RLDandPVALS_24.csv", row.names=1)
+head(rldpvals_NFlag)
+rld_NFlag <- rldpvals_NFlag[,1:3]
+head(rld_NFlag)
+
+rldpvals_NLSFlag <- read.csv(file="./Data_Files/mingers_NLSFlag_RLDandPVALS_24.csv", row.names=1)
+head(rldpvals_NLSFlag)
+rld_NLSFlag <- rldpvals_NLSFlag[,1:3]
+head(rld_NLSFlag)
+```
+
+Now going to perform PCA on the data to visualize overall effect of experimental covariates and batch effects
+- t transposes the rld table and makes all the rows columns, and the columns rows. So here the isoform names that were rownames are now the column names. 
+- prcomp performs a pca on given data matrix and returns results as an object of class prcomp
+- sdev is the standard deviations of the principal components
+- Using the sdev, calculate the proportion that each PC corresponds to the variance
+- Then round PC1 and PC2 (times 100, to 1 sigfig)
+- x from prcomp seems like it's the coordinates of each treatment in the PCA
+- turn pca$x into a dataframe
+```{r}
+#for ALL
+rld_t=t(rld)
+#colnames(rld_t)
+pca <- prcomp(rld_t,center = TRUE)
+li <- pca$sdev^2 / sum(pca$sdev^2)
+pc1v <- round(li[1] * 100, 1)
+pc2v <- round(li[2] * 100, 1)
+pca_s <- as.data.frame(pca$x)
+pca_s <- pca_s[,c(1,2)]
+
+pca_s$Samples = row.names(pca_s)
+pca_s$sample = c("flag1_S33", "flag2_S34", "flag3_S35", "N1_S36", "N2_S37", "N3_S38", "NLS1_S39", "NLS2_S40", "NLS3_S41")
+pca_s$treat=allData$treat
+
+head(pca_s)
+```
+
+Creating PCA plots
+```{r}
+treat_color= c("mediumblue", "red", "darkgreen")
+#fill_color=c("white","white","gray50","purple")
+#sym_shape = c(21,22,23,24,25,21,22,23,24,25)
+
+
+pca_plot <- ggplot(pca_s, aes(PC1, PC2, color = treat, group=treat)) +
+  geom_point(size=2) +
+  #  geom_text_repel(aes(label=Samples)) +
+  scale_colour_manual(values=treat_color)+
+  #scale_fill_manual(values=fill_color, guide=NULL)+
+  #scale_shape_manual(values=sym_shape, guide=guide_legend(override.aes = list(fill=list("white","white","white","white","white","black","black","black","black","black")))) +
+  stat_ellipse()+
+  labs(color="Treatment")+
+  xlab(paste0("PC1: ",pc1v,"% variance")) +
+  ylab(paste0("PC2: ",pc2v,"% variance")) +
+  theme(panel.background = element_rect(color="black", fill="white"),
+        axis.text = element_text(colour="black", size=10), 
+        axis.title.x = ggtext::element_markdown(face="bold", size=12),
+        axis.title.y = ggtext::element_markdown(face="bold",size=12),
+        panel.grid.major = element_line(colour = "gray80", linewidth = 0.5, linetype="dotted"),
+        legend.position="right",
+        legend.background=element_rect(color="black"),
+        legend.text=element_text(face="bold", color="black", size=8),
+        legend.title= element_blank(),
+        legend.text.align = 0,
+        legend.key.size=unit(10,"point"))
+pca_plot # saved as portrait with 4x3 as pca_012223.pdf in Figures
+
+```
 
 
