making files for fisher

--- a/HEK293T_Mengrui.Rmd
+++ b/HEK293T_Mengrui.Rmd
@@ -23,6 +23,7 @@ install.packages("reshape2")
 install.packages("tidyselect")
 install.packages("dplyr")
 install.packages("devtools")
+install.packages("tibble")
 
 library(DESeq2)
 library(arrayQualityMetrics)
@@ -38,6 +39,7 @@ library(reshape2)
 library(tidyselect)
 library(dplyr)
 library(devtools)
+library(tibble)
 ```
 
 Set your working directory (the entire path to the folder that contains this rmarkdown and your data files)
@@ -599,3 +601,86 @@ write.csv(go_input_NNLS, file="./Data_Files/NNLS_GO_24.csv", quote=F, row.names=
 ```
 
 Making the emapper annotation files from the GRCh38 RefSeq proteins
+
+Prepping for Fisher for the degs from the Venn
+- Looking at the shared 1213 degs
+```{r}
+##read back in your res_N_Flag and res_NLS_Flag files with the rownames as the geneID but name it something else so that it doesn't get confused with the res_N_Flag and res_NLS_Flag modified for GO input
+resNFlag<- read.delim("./Data_Files/N_Flag_DE_24.txt")
+head(resNFlag)
+resNFlag$lfc_NFlag <- resNFlag$log2FoldChange
+head(resNFlag)
+
+resNLSFlag<- read.delim("./Data_Files/NLS_Flag_DE_24.txt")
+head(resNLSFlag)
+resNLSFlag$lfc_NLSFlag <- resNLSFlag$log2FoldChange
+head(resNLSFlag)
+
+intersect05 <- intersect(N_DEGs05, NLS_DEGs05)
+shared_N <- as.data.frame(resNFlag)[rownames(resNFlag) %in% intersect05, ] %>% select(log2FoldChange)
+N_name <- c("N_lfc")
+colnames(shared_N) <- N_name
+shared_NLS <- as.data.frame(resNLSFlag)[rownames(resNLSFlag) %in% intersect05, ] %>% select(log2FoldChange)
+NLS_name <- c("NLS_lfc")
+colnames(shared_NLS) <- NLS_name
+
+shared_both_lfc <- cbind(shared_N, shared_NLS)
+head(shared_both_lfc)
+
+ggscatter(shared_both_lfc, x = "N_lfc", y = "NLS_lfc", 
+          add = "reg.line", conf.int = TRUE, 
+          cor.coef = TRUE, cor.method = "pearson",
+          xlab = "DEG LogFoldChange N to Flag", ylab = "DEG LogFoldChange NLS to Flag")+ theme(panel.grid.major = element_line(colour = "gray80", linewidth = 0.5, linetype="dotted"))
+
+#saved as shared_DEGs05_correlation.pdf as landscape with 5x5
+#R=0.99, p<2.2e-16; no DEGs that are doing opposite things
+```
+
+Now doing GO analysis on the Apo only, Sym only, and shared DEGs (via Fisher Exact test)
+
+- First format your input files
+```{r}
+iso2go_name <- read.table("./Data_Files/GRCh38_iso2go.tab", sep="\t")
+colnames(iso2go_name)=paste(c("gene_ID", "GO"))
+
+#starting with just the shared ones because those were easiest to pull out from above; doesn't matter whether we do N or NLS for this because they have the same
+head(shared_N)
+shared_fisher <- shared_N
+shared_fisher <- rownames_to_column(shared_fisher, var="gene_ID")
+head(shared_fisher) 
+shared_fisher <- shared_fisher %>%
+  mutate(Fishers = 1) %>%
+  dplyr::select(gene_ID, Fishers) %>%
+  full_join(iso2go_name) %>%
+  mutate(Fishers = if_else(is.na(Fishers), 0, 1)) %>%
+  select(gene_ID, Fishers)
+head(shared_fisher)
+write.csv(shared_fisher, file="./Data_Files/shared_fisher_GO.csv", quote=F, row.names=FALSE)
+
+
+#now trying to isolate the just N and just NLS ones
+N_DEGs05_DF <- as.data.frame(N_DEGs05) %>%
+  mutate(gene_ID = N_DEGs05) %>%
+  mutate(Fishers_N = 1)%>%
+  dplyr::select(gene_ID, Fishers_N)
+NLS_DEGs05_DF <- as.data.frame(NLS_DEGs05) %>%
+  mutate(gene_ID = NLS_DEGs05) %>%
+  mutate(Fishers_NLS = 1)%>%
+  dplyr::select(gene_ID, Fishers_NLS)
+fj <- full_join(N_DEGs05_DF, NLS_DEGs05_DF) %>%
+  full_join(iso2go_name)
+tail(fj)
+
+fishers_N_only <- fj %>%
+  mutate(Fishers_N = if_else(is.na(Fishers_N), 0, 1)) %>%
+  select(gene_ID, Fishers_N)
+write.csv(fishers_N_only, file="./Data_Files/fishers_N_only_GO.csv", quote=F, row.names=FALSE)
+
+fishers_NLS_only <- fj %>%
+  mutate(Fishers_NLS = if_else(is.na(Fishers_NLS), 0, 1)) %>%
+  select(gene_ID, Fishers_NLS)
+write.csv(fishers_NLS_only, file="./Data_Files/fishers_NLS_only_GO.csv", quote=F, row.names=FALSE)
+```
+
+
+
