--- a/HEK293T_Mengrui.Rmd
+++ b/HEK293T_Mengrui.Rmd
@@ -72,8 +72,8 @@ head(countData)
 
 #look at the distribution of your count data throughout your samples
 totalCounts=colSums(countData)
-barplot(totalCounts, col=c("mediumblue", "mediumblue", "mediumblue", "red", "red", "red", "darkgreen", "darkgreen", "darkgreen"), ylab="Raw Counts", xlab="HEK293T")
-
+barplot(totalCounts, col=c("#669966", "#669966", "#669966", "#0066CC", "#0066CC", "#0066CC", "#CC99CC", "#CC99CC", "#CC99CC"), ylab="Raw Counts", xlab="HEK293T")
+#saved as HEK293T_counts.pdf
 
 min(totalCounts)
 #480525     
@@ -164,7 +164,7 @@ Raw Sample Comparison
 sampleDists <- as.matrix(dist(t(assay(rld))))
 
 heatmap.2(as.matrix(sampleDists), key=F, trace="none",
-          col=colorpanel(100, "black", "white"), ColSideColors=c("mediumblue",  "mediumblue", "mediumblue", "red", "red", "red", "darkgreen", "darkgreen", "darkgreen"),RowSideColors = c("mediumblue", "mediumblue", "mediumblue", "red", "red", "red", "darkgreen", "darkgreen", "darkgreen"),
+          col=colorpanel(100, "black", "white"), ColSideColors=c("#669966", "#669966", "#669966", "#0066CC", "#0066CC", "#0066CC", "#CC99CC", "#CC99CC", "#CC99CC"),RowSideColors =c("#669966", "#669966", "#669966", "#0066CC", "#0066CC", "#0066CC", "#CC99CC", "#CC99CC", "#CC99CC"),
           margin=c(10, 10))
 
 #saved as sampledisthm.pdf as landscape with 5x5 dimensions
@@ -301,7 +301,7 @@ table(complete.cases(val_N_NLS))
 
 - Make a table (that you can visualize via assay) of the rlogdata and pvals
 - Then make the column names for rld the same ones that were in colData$treat
-- And separate out into N, NLS, and Flag
+- And separate out into the different comparisons
 ```{r}
 rlog=rlogTransformation(dds, blind=TRUE) 
 rld=assay(rlog)
@@ -317,11 +317,20 @@ head(rld_N)
 
 rld_NLS <- rld[,7:9]
 head(rld_NLS)
+
+rld_NFlag <- cbind(rld_N, rld_Flag)
+head(rld_NFlag)
+
+rld_NLSFlag <- cbind(rld_NLS, rld_Flag)
+head(rld_NLSFlag)
+
+rld_NNLS <- cbind(rld_N, rld_NLS)
+head(rld_NNLS)
 ```
 
 - Combine rlds with your tables of pval and padj values (with the respective conditions)
 ```{r}
-rldpvals_NFlag=cbind(rld_N,val_N_Flag)
+rldpvals_NFlag=cbind(rld_NFlag,val_N_Flag)
 head(rldpvals_NFlag)
 dim(rldpvals_NFlag)
 table(complete.cases(rldpvals_NFlag))
@@ -329,7 +338,7 @@ table(complete.cases(rldpvals_NFlag))
 #48082 10966
 write.csv(rldpvals_NFlag, "./Data_Files/mingers_NFlag_RLDandPVALS_24.csv", quote=F)
 
-rldpvals_NLSFlag=cbind(rld_NLS,val_NLS_Flag)
+rldpvals_NLSFlag=cbind(rld_NLSFlag,val_NLS_Flag)
 head(rldpvals_NLSFlag)
 dim(rldpvals_NLSFlag)
 table(complete.cases(rldpvals_NLSFlag))
@@ -342,12 +351,12 @@ Read back in the csv files you just made to prep for PCA
 ```{r}
 rldpvals_NFlag <- read.csv(file="./Data_Files/mingers_NFlag_RLDandPVALS_24.csv", row.names=1)
 head(rldpvals_NFlag)
-rld_NFlag <- rldpvals_NFlag[,1:3]
+rld_NFlag <- rldpvals_NFlag[,1:6]
 head(rld_NFlag)
 
 rldpvals_NLSFlag <- read.csv(file="./Data_Files/mingers_NLSFlag_RLDandPVALS_24.csv", row.names=1)
 head(rldpvals_NLSFlag)
-rld_NLSFlag <- rldpvals_NLSFlag[,1:3]
+rld_NLSFlag <- rldpvals_NLSFlag[,1:6]
 head(rld_NLSFlag)
 ```
 
@@ -379,7 +388,7 @@ head(pca_s)
 
 Creating PCA plots
 ```{r}
-treat_color= c("mediumblue", "red", "darkgreen")
+treat_color= c("#669966", "#0066CC", "#CC99CC")
 #fill_color=c("white","white","gray50","purple")
 #sym_shape = c(21,22,23,24,25,21,22,23,24,25)
 
@@ -405,14 +414,14 @@ pca_plot <- ggplot(pca_s, aes(PC1, PC2, color = treat, group=treat)) +
         legend.title= element_blank(),
         legend.text.align = 0,
         legend.key.size=unit(10,"point"))
-pca_plot # saved as portrait with 4x3 as pca_021624.pdf in Figures
+pca_plot # saved as portrait with 4x3 as pca_HEK293T.pdf in Figures
 
 install_github("pmartinezarbizu/pairwiseAdonis/pairwiseAdonis")
 library(pairwiseAdonis)
 
-# Effect of Nutrition
+# Effect of treatment
 adonis2(pca$x ~ treat, data = pca_s, method='eu', na.rm = TRUE)
-# Pr(>F) = 0.009
+# Pr(>F) = 0.023 *
 
 # Pairwise effect of treatment (to get individual pairwise comparisons)
 pairwise.adonis2(pca$x ~ treat, data = pca_s, method='eu', na.rm = TRUE)
@@ -509,7 +518,7 @@ candidates_all05=list("N"=N_DEGs05, "NLS"=NLS_DEGs05)
 prettyvenn05=venn.diagram(
   x = candidates_all05,
   category.names=c("N (1379)", "NLS (1828)"),
-  col=c("red","darkgreen"),
+  col=c("#0066CC", "#CC99CC"),
   lwd=c(3,3),
   filename=NULL,
   #main = "DEGs in Comparison to Flag",
@@ -517,7 +526,7 @@ prettyvenn05=venn.diagram(
   main.fontface = "bold",
   main.fontfamily = "sans",
   #col = "transparent",
-  fill = c("red","darkgreen"),
+  fill = c("#0066CC", "#CC99CC"),
   alpha = 0.3,
   cex = 1.5,
   fontfamily = "sans",
@@ -682,5 +691,160 @@ fishers_NLS_only <- fj %>%
 write.csv(fishers_NLS_only, file="./Data_Files/fishers_NLS_only_GO.csv", quote=F, row.names=FALSE)
 ```
 
+##Kegg
+```{r}
+BiocManager::install("clusterProfiler")
+BiocManager::install("pathview")
+BiocManager::install("enrichplot")
 
+# Load the libraries
+library(clusterProfiler)
+library(enrichplot)
+library(pathview)
+
+search_kegg_organism('hsa', by='kegg_code')
+```
+
+Prepping files for GSEA input
+need the rld expression value for each gene for each sample you're comparing
+```{r}
+head(rldpvals_NFlag)
+head(rld_NFlag)
+head(rldpvals_NLSFlag)
+head(rld_NLSFlag)
+
+#make the iso a new column with the label "description"
+rld_NFlag_new <- rld_NFlag
+rld_NFlag_new <- rownames_to_column(rld_NFlag_new, var="DESCRIPTION")
+head(rld_NFlag_new)
+
+rld_NLSFlag_new <- rownames_to_column(rld_NLSFlag, var="DESCRIPTION")
+head(rld_NLSFlag_new)
+
+##combine your rld files in one of the following ways
+#rld_N_NLS <- rld_NFlag_new %>%
+#  left_join(rld_NLSFlag_new)
+
+#rld_N_NLS <- left_join(x=rld_NFlag_new, y=rld_NLSFlag_new)
+
+rld_N_NLS <- full_join(x=rld_NFlag_new, y=rld_NLSFlag_new)
+head(rld_N_NLS)
+
+#read in iso2go
+iso2gene = read.table("./Data_Files/GRCh38_gene2iso.tab", sep="\t")
+head(iso2gene)
+
+colnames(iso2gene)=paste(c("DESCRIPTION","NAME"))
+
+#not actually using this way
+rld_N_NLS_gsea_input <- rld_N_NLS %>%
+  left_join(iso2gene) %>%
+  relocate(NAME, .before=DESCRIPTION)
+head(rld_N_NLS_gsea_input)
+write.table(rld_N_NLS_gsea_input, file="./Data_Files/rld_N_NLS_gsea_input.txt", quote=F, sep="\t")
+head(read.delim("./Data_Files/rld_N_NLS_gsea_input.txt", sep="\t"))
+```
+
+Trying GSEA according to https://learn.gencore.bio.nyu.edu/rna-seq-analysis/gene-set-enrichment-analysis/
+
+This is done in an interactive job on the cluster
+```{r}
+#read in and prep files
+res_N_Flag<- read.delim("./Data_Files/N_Flag_DE_24.txt")
+head(res_N_Flag)
+res_N_Flag$lfc_NFlag <- res_N_Flag$log2FoldChange
+head(res_N_Flag)
+res_N_Flag = res_N_Flag %>%
+  tibble::rownames_to_column(var = "gene_ID")
+head(res_N_Flag)
+nrow(res_N_Flag)
+
+res_NLS_Flag<- read.delim("./Data_Files/NLS_Flag_DE_24.txt")
+head(res_NLS_Flag)
+res_NLS_Flag$lfc_NLSFlag <- res_NLS_Flag$log2FoldChange
+head(res_NLS_Flag)
+res_NLS_Flag = res_NLS_Flag %>%
+  tibble::rownames_to_column(var = "gene_ID")
+head(res_NLS_Flag)
+nrow(res_NLS_Flag)
+
+#make your files into GSEA-ready files
+head(res_N_Flag)
+res_N_Flag_gsea <- res_N_Flag %>%
+  dplyr::select(gene_ID, lfc_NFlag)
+head(res_N_Flag_gsea)
+colnames(res_N_Flag_gsea)=paste(c("DESCRIPTION","lfc_NFlag"))
+head(res_N_Flag_gsea)
+#res_N_Flag_gsea <- column_to_rownames(res_N_Flag_gsea, var="DESCRIPTION")
+res_N_Flag_gsea <- res_N_Flag_gsea %>%
+  left_join(iso2gene) %>%
+  dplyr::select(-DESCRIPTION)
+ # column_to_rownames(var="NAME")
+
+head(res_NLS_Flag)
+res_NLS_Flag_gsea <- res_NLS_Flag %>%
+  dplyr::select(gene_ID, lfc_NLSFlag)
+head(res_NLS_Flag_gsea)
+colnames(res_NLS_Flag_gsea)=paste(c("DESCRIPTION","lfc_NLSFlag"))
+head(res_NLS_Flag_gsea)
+#res_NLS_Flag_gsea <- column_to_rownames(res_NLS_Flag_gsea, var="DESCRIPTION")
+res_NLS_Flag_gsea <- res_NLS_Flag_gsea %>%
+  left_join(iso2gene) %>%
+  dplyr::select(-DESCRIPTION)
+
+# SET THE DESIRED ORGANISM HERE
+organism = "org.Hs.eg.db"
+BiocManager::install(organism, character.only = TRUE)
+library(organism, character.only = TRUE)
+
+keytypes(org.Hs.eg.db)
+
+
+# we want the log2 fold change 
+original_gene_list_N <- res_N_Flag_gsea$lfc_NFlag
+original_gene_list_NLS <- res_NLS_Flag_gsea$lfc_NLSFlag
+
+# name the vector
+names(original_gene_list_N) <- res_N_Flag_gsea$DESCRIPTION
+
+# omit any NA values 
+gene_list_N<-na.omit(original_gene_list_N)
+
+# sort the list in decreasing order (required for clusterProfiler)
+gene_list_N = sort(gene_list_N, decreasing = TRUE)
+
+####run this on in an interactive job on the cluster
+#gse_N <- gseGO(geneList=gene_list_N, 
+            # ont ="ALL", 
+            # keyType = "REFSEQ", 
+            # nPerm = 10000, 
+            # minGSSize = 3, 
+            # maxGSSize = 800, 
+            # pvalueCutoff = 0.05, 
+            # verbose = TRUE, 
+            # OrgDb = organism, 
+            # pAdjustMethod = "none")
+
+```
+
+Change the iso name to a nice gene symbol name
+```{r}
+NFlag_names <- read.csv(file="./Data_Files/mingers_NFlag_RLDandPVALS_24.csv")
+head(NFlag_names)
+NFlag_names= NFlag_names %>%
+  mutate(DESCRIPTION = X) %>%
+  dplyr::select(-X) %>%
+  relocate(DESCRIPTION, .before=N1_S36) 
+head(NFlag_names)
+
+head(iso2gene)
+
+NFlag_names <- NFlag_names %>%
+  distinct(DESCRIPTION, .keep_all = TRUE) %>%
+  left_join(iso2gene) %>%
+  relocate(NAME, .before=N1_S36) 
+head(NFlag_names)
+
+#there's something funky with my iso2gene file, the gene names are weird, so gotta fix that 
+```
 
